frontend/tests/snapshots/snapshot_serialization_tests__given_condition_node.snap
---
source: tests/snapshot_serialization_tests.rs
expression: "&node"
---
{
  "id": "00000000-0000-0000-0000-000000000040",
  "name": "Condition",
  "category": "flow",
  "icon": "git-branch",
  "x": 290.0,
  "y": 300.0,
  "last_output": null,
  "selected": false,
  "executing": false,
  "skipped": false,
  "node_type": "condition",
  "description": "Conditional branch",
  "config": {
    "expression": "$.amount > 100",
    "type": "condition"
  }
}
