frontend/tests/snapshots/snapshot_serialization_tests__given_durable_promise_node.snap
---
source: tests/snapshot_serialization_tests.rs
expression: "&node"
---
{
  "id": "00000000-0000-0000-0000-000000000047",
  "name": "Durable Promise",
  "category": "durable",
  "icon": "shield",
  "x": 430.0,
  "y": 440.0,
  "last_output": null,
  "selected": false,
  "executing": false,
  "skipped": false,
  "node_type": "durable-promise",
  "description": "Durable promise",
  "config": {
    "promise_name": "await-approval",
    "type": "durable-promise"
  }
}
