frontend/tests/snapshots/snapshot_serialization_tests__given_loop_node.snap
---
source: tests/snapshot_serialization_tests.rs
expression: "&node"
---
{
  "id": "00000000-0000-0000-0000-000000000042",
  "name": "Loop",
  "category": "flow",
  "icon": "repeat",
  "x": 330.0,
  "y": 340.0,
  "last_output": null,
  "selected": false,
  "executing": false,
  "skipped": false,
  "node_type": "loop",
  "description": "Iterate over collection",
  "config": {
    "iterator": "$.items",
    "type": "loop"
  }
}
